--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
             <version>3.36.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>vlcj</artifactId>
+            <version>4.7.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>vlcj-javafx</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
     </dependencies>
     
 </project>
